<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Top Albums Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="hint_artist">Enter a musical artist.</string>
    <string name="hint_user">Enter a Last.fm user name.</string>
    <string name="hint_tag">Enter a music tag (eg Disco).</string>
    <string name="hint_filter">Filter search by artist.</string>
    
    <string name="label_artist_name">Artist</string>
    <string name="label_album_name">Album</string>
    <string name="label_summary_label">Summary</string>
    <string name="label_track_number">Tracks</string>
    
    <string name="button_submit">Submit</string>
    <string name="button_back">&lt; New Query</string>
    <string name="button_filter">Filter</string>
    <string name="button_filter_clear">Clear</string>
    <string name="button_share">Share This Album</string>
    
    <string name="toast_no_network">No network connection. Displaying latest cached data.</string>
    <string name="toast_no_cache">No network connection. Please check your connection and try again.</string>
    <string name="toast_invalid_entry">Invalid entry. Check spelling and try again.</string>
    <string name="toast_no_input">Input field cannot be left blank.</string>
    
    <string name="access">Album Art</string>
    
    <string name="error_na">N/A</string>
    <string name="error_no_summary">No summary available.</string>
    
    <string name="cell_image_desc">Album Artwork</string>
    
    <string name="instructions">Select between Last.FM user id, musical artist name, or musical tag using the drowdown above and enter a term into the searchbox. Then press the submit button to start the search.</string>
</resources>
